...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06999999" />

        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintTop_toBottomOf="@id/reminderDescriptionmaintitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
...
